<resources>
    <string name="app_name">Aria</string>
    <string name="fb_app_id">1936064290001318</string>
    <string name="aria">ARIA</string>
    <string name="appDescription">A MULTI-PLATFORM APPLICATION FOR AUDIO AND VIDEO BAND PROMOTION</string>


    <string name="search">SEARCH</string>
    <string name="drawerHome">HOME</string>
    <string name="drawerFeed">FEED</string>
    <string name="drawerTopCharts">TOP CHARTS</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="my_bands">MY BANDS</string>
    <string name="find_friends">FIND FRIENDS</string>
    <string name="log_out">LOG OUT</string>
    <string name="settings">SETTINGS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="band_name">Band Name</string>
    <string name="band_description">Band Description</string>
    <string name="band_role">Select Your Role</string>
    <string name="primary_band_genre">Primary Band Genre</string>
    <string name="secondary_band_genre">Secondary Band Genre</string>
    <string name="band_pic">Band Picture</string>
    <string name="album_description">Album Description</string>
    <string name="album_name">Album Name</string>
    <string name="video_title">Video Title</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="follow">Follow</string>
    <string name="unFollow">Unfollow</string>
    <string name="like">Like</string>
    <string name="unLike">Unlike</string>
    <string name="featured">FEATURED</string>

    <string-array name="roles">
        <item>Vocalist</item>
        <item>Lead Guitar</item>
        <item>Rhythm Guitar</item>
        <item>Keyboardist</item>
        <item>Drummer</item>
        <item>Bassist</item>
    </string-array>

    <string-array name="genres">
        <item>Alternative</item>
        <item>Blues</item>
        <item>Classical</item>
        <item>Country</item>
        <item>Dance</item>
        <item>Electronic</item>
        <item>Hiphop</item>
        <item>Inspirational</item>
        <item>Jazz</item>
        <item>Opera</item>
        <item>Pop</item>
        <item>Punk</item>
        <item>R&amp;B</item>
        <item>Rap</item>
        <item>Reggae</item>
        <item>Rock</item>
        <item>Romance</item>
        <item>Soul</item>
    </string-array>

</resources>
