<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="CreateBandBinding">

        <variable
            name="viewmodel"
            type="com.example.ksfgh.aria.ViewModel.MyBandsViewModel"/>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:background="@color/toolbarColor"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Form your band"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="8dp"
                />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/band_name"
                android:textColorHint="@color/white"
                android:padding="8dp"
                android:theme="@style/TextStyle">
                <EditText
                    android:id="@+id/etBandName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/band_description"
                android:textColorHint="@color/white"
                android:padding="8dp"
                android:theme="@style/TextStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etBandDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textMultiLine"
                    android:minLines="4"
                    android:scrollbars="vertical"
                    android:gravity="start"
                    android:textColor="@color/white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/band_role"
                android:textColorHint="@color/white"
                android:padding="8dp"
                >

                <AutoCompleteTextView
                    android:id="@+id/actvBandRole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/white"
                    bind:acAdapter="@{viewmodel.bandRoles}"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/collapsedTitleTextAppearance"
                android:layout_marginLeft="8dp"
                android:textColor="@color/white"
                android:text="@string/primary_band_genre"/>

            <Spinner
                android:id="@+id/spnrPrimaryGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:padding="8dp"
                android:popupBackground="@color/toolbarColor"
                bind:spnrAdapter="@{viewmodel.genres}"></Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/collapsedTitleTextAppearance"
                android:layout_marginLeft="8dp"
                android:text="@string/secondary_band_genre"
                android:textColor="@color/white"/>

            <Spinner
                android:id="@+id/spnrSecondaryGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:padding="8dp"
                android:popupBackground="@color/toolbarColor"
                bind:spnrAdapter="@{viewmodel.genres}"></Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/collapsedTitleTextAppearance"
                android:layout_marginLeft="8dp"
                android:text="@string/band_pic"
                android:textColor="@color/white"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitCenter"
                    bind:url="@{viewmodel.bandImage}"
                    android:onClick="@{()->viewmodel.pickPhoto(0)}"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</layout>