<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.ksfgh.aria.ViewModel.HomeScreenViewModel"/>
    </data>



        <nl.psdcompany.duonavigationdrawer.views.DuoDrawerLayout
            android:id="@+id/duoDrawerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/drawerBackground"
                android:orientation="vertical"
                android:tag="menu">

                <LinearLayout
                    android:id="@+id/llLogoSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                   >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="90dp"
                            android:layout_weight="1"
                            android:src="@drawable/logo"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/aria"
                            android:layout_weight="1"
                            android:layout_marginLeft="-30dp"
                            android:textSize="40sp"
                            android:fontFamily="@font/bebasnue"
                            android:textColor="@color/white"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="100dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="@{(v) -> viewModel.onDrawerItemClick(v)}">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_home"
                        android:tint="@color/drawerItemColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/drawerHome"
                        android:textColor="@color/drawerItemColor"
                        android:fontFamily="@font/bebasnue"
                        android:textSize="16sp"
                        android:layout_marginLeft="20dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llFeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginRight="100dp"
                    android:orientation="horizontal"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="@{(v) -> viewModel.onDrawerItemClick(v)}">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_feed"
                        android:tint="@color/drawerItemColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/drawerFeed"
                        android:textColor="@color/drawerItemColor"
                        android:fontFamily="@font/bebasnue"
                        android:textSize="16sp"
                        android:layout_marginLeft="20dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llTopCharts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginRight="100dp"
                    android:orientation="horizontal"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="@{(v) -> viewModel.onDrawerItemClick(v)}">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_chart"
                        android:tint="@color/drawerItemColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/drawerTopCharts"
                        android:textColor="@color/drawerItemColor"
                        android:fontFamily="@font/bebasnue"
                        android:layout_marginLeft="20dp"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginRight="100dp"
                    android:orientation="horizontal"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="@{(v) -> viewModel.onDrawerItemClick(v)}">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_search"
                        android:tint="@color/drawerItemColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/search"
                        android:textColor="@color/drawerItemColor"
                        android:fontFamily="@font/bebasnue"
                        android:layout_marginLeft="20dp"
                        android:textSize="16sp"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/drawerItemColor"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="100dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>

                <LinearLayout
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civUserPic"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:civ_border_color="@color/civBorderColor"
                        app:civ_border_width="2dp"
                        bind:url="@{viewModel.url}"/>

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/drawerItemColor"
                        android:fontFamily="@font/bebasnue"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:text="@{viewModel.userName}"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llNotifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginRight="100dp"
                    android:orientation="horizontal"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="@{(v) -> viewModel.onDrawerItemClick(v)}">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_notifications"
                        android:tint="@color/drawerItemColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/notifications"
                        android:textColor="@color/drawerItemColor"
                        android:fontFamily="@font/bebasnue"
                        android:layout_marginLeft="20dp"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llMyBands"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginRight="100dp"
                    android:orientation="horizontal"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="@{(v) -> viewModel.onDrawerItemClick(v)}">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_guitar"
                        android:tint="@color/drawerItemColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/my_bands"
                        android:textColor="@color/drawerItemColor"
                        android:fontFamily="@font/bebasnue"
                        android:layout_marginLeft="20dp"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llFindFriends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginRight="100dp"
                    android:orientation="horizontal"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="@{(v) -> viewModel.onDrawerItemClick(v)}">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_find_friends"
                        android:tint="@color/drawerItemColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/find_friends"
                        android:textColor="@color/drawerItemColor"
                        android:fontFamily="@font/bebasnue"
                        android:layout_marginLeft="20dp"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginRight="100dp"
                    android:orientation="horizontal"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="@{(v) -> viewModel.onDrawerItemClick(v)}">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_settings"
                        android:tint="@color/drawerItemColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/settings"
                        android:textColor="@color/drawerItemColor"
                        android:fontFamily="@font/bebasnue"
                        android:layout_marginLeft="20dp"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginRight="100dp"
                    android:orientation="horizontal"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="@{(v) -> viewModel.onDrawerItemClick(v)}">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_log_out"
                        android:tint="@color/drawerItemColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/log_out"
                        android:textColor="@color/drawerItemColor"
                        android:fontFamily="@font/bebasnue"
                        android:layout_marginLeft="20dp"
                        android:textSize="16sp"/>

                </LinearLayout>

            </LinearLayout>

            <!--Container-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.example.ksfgh.aria.View.activities.HomeScreen"
                android:tag="content">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/abl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/toolbarColor"
                    android:theme="@style/ToolBarStyle"
                    app:popupTheme="@style/ToolBarStyle"
                    app:title="@{viewModel.toolbarTitle}" />
            </android.support.design.widget.AppBarLayout>

            <FrameLayout
                android:id="@+id/layoutContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/abl"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:elevation="7dp"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="8dp"
                    android:layout_alignParentBottom="true"
                    android:visibility="gone"></android.support.v7.widget.CardView>

            </RelativeLayout>

        </nl.psdcompany.duonavigationdrawer.views.DuoDrawerLayout>

</layout>

